// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/forms/PlanForm Form validation works: Errors 1`] = `
Array [
  Object {
    "errors": Array [
      "'title' is required",
    ],
    "name": Array [
      "title",
    ],
  },
  Object {
    "errors": Array [
      "'name' is required",
    ],
    "name": Array [
      "name",
    ],
  },
  Object {
    "errors": Array [
      "'date' is not a valid string",
    ],
    "name": Array [
      "date",
    ],
  },
]
`;

exports[`containers/forms/PlanForm Form validation works: date error 1`] = `
Array [
  "'date' is required",
]
`;

exports[`containers/forms/PlanForm Form validation works: end error 1`] = `Array []`;

exports[`containers/forms/PlanForm Form validation works: interventionType error 1`] = `Array []`;

exports[`containers/forms/PlanForm Form validation works: invalid data type Errors 1`] = `
Array [
  Object {
    "errors": Array [
      "'title' is required",
    ],
    "name": Array [
      "title",
    ],
  },
  Object {
    "errors": Array [
      "'name' is required",
    ],
    "name": Array [
      "name",
    ],
  },
  Object {
    "errors": Array [
      "'date' is required",
    ],
    "name": Array [
      "date",
    ],
  },
]
`;

exports[`containers/forms/PlanForm Form validation works: more Errors 1`] = `
Array [
  Object {
    "errors": Array [
      "'title' is required",
    ],
    "name": Array [
      "title",
    ],
  },
  Object {
    "errors": Array [
      "'name' is required",
    ],
    "name": Array [
      "name",
    ],
  },
  Object {
    "errors": Array [
      "'date' is required",
    ],
    "name": Array [
      "date",
    ],
  },
]
`;

exports[`containers/forms/PlanForm Form validation works: name error 1`] = `
Array [
  "'name' is required",
]
`;

exports[`containers/forms/PlanForm Form validation works: start error 1`] = `Array []`;

exports[`containers/forms/PlanForm Form validation works: title error 1`] = `
Array [
  "'title' is required",
]
`;
